# linux_esp32

./: CMakeLists.txt  README.md  esp32-ifdown  esp32-ifup  linux_lwip.c  main_task.c
components/esp32/: dummy_esp32.c  dummy_esp_wifi.c  dummy_esp_wifi_internal.c
components/ethernet/include/: esp_eth.h
components/lwip/core/: memp.c
components/lwip/port/: dummy_sys_arch.c  lwipopts.h  sys_arch.c
components/lwip/port/netif/: emac_main.c  ethernetif.c  tapif.c  tunif.c
components/nvs_flash/: nvs_flash.c
freeRTOS/: README.md  queue.c  tasks.c
freeRTOS/freertos/: FreeRTOS.h  event_groups.h  queue.h  task.h
freeRTOS/portable/GCC/Posix/: port.c  portmacro.h
main/: main.c  sdkconfig.h
net/: a.out
